# LiDAR_Obstacle_DetectionPipeline

./: CMakeLists.txt  README.md
include/: bounding_box.h  clustering.h  config.h  filter.h  loader.h  renderer.h  segmentation.h  types.h
src/: bounding_box.cpp  clustering.cpp  filter.cpp  loader.cpp  main.cpp  renderer.cpp  segmentation.cpp
